BUG fix: resolvendo bug gettransacao